--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-kabzda",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://govori.github.io/sotialNetwork",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
